# school

./: .gitignore
KRProject/: solver.txt  testCase.txt
acsc/lead/: assignment1.typ  global_format.typ
cse535/assignment1/: a1.py  pyproject.toml
cse535/assignment2/: a2.py  pyproject.toml
cse535/assignment3/: a3.py  dataset.csv  pyproject.toml
cse535/idea/: build.nu  idea_paper.typ  proceedings.tex  sample.bib
cse535/project1/: Cargo.toml  deploy.sh
cse535/project1/src/: main.rs
cse556/assignment1/: assignment1.typ  bib.yml
cse556/assignment2/: assignment2.typ  bib.yml
cse556/assignment3/: assignment.txt  assignment3.typ  bib.yml
cse556/assignment4/: assignment4.typ  bib.bib
cse556/assignment5/: assignment5.typ  bib.yml  report.txt
oscp/: group-membership.sh  ping-sweep.py  ping-sweep.sh
oscp/dnsstuff/: Cargo.toml
oscp/dnsstuff/src/: main.rs
oswa/: .gitignore  Cargo.toml
oswa/.cargo/: config.toml
oswa/rev_shell/java/: Payload.java
oswa/xss/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.ts
oswa/xss/src/: loader.ts  xss.ts
oswa/xss/src/ext/: keylogger.js  survey.ts
oswa/xss_server/: Cargo.toml
oswa/xss_server/src/: foo.js  main.rs
vtt_extract/: Cargo.toml
vtt_extract/src/: main.rs
