[package]
edition = "2021"
name = "xss_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers"] }
base64 = "0.21"
clap = { version = "4", features = ["derive", "env"] }
http = "0.2"
http-serde = "1"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.4", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
